--- a/src/assets/styles/nav.css
+++ b/src/assets/styles/nav.css
@@ -1,5 +1,5 @@
 /* START - NAV - When logged out */
-.loggedOut-nav{
+.nav{
     width: 100%;
     height: 64px;
     padding: 0 20px;
@@ -9,12 +9,12 @@
     position: fixed;
     top: 0;
     left: 0;
-    color: var(--color-light-bg);
+    background-color: var(--color-light-bg);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.35);
     z-index: 10;
   }
   
-  .loggedOut-nav ul{
+  .nav ul{
     display: flex;
     gap: 1rem;
   }
@@ -35,7 +35,7 @@
 
 /*Mobile*/
 @media (max-width: 430px) {
-  .loggedOut-nav{
+  .nav{
     height: auto;
     padding: 10px;
   }
