--- a/src/assets/styles/carousel.css
+++ b/src/assets/styles/carousel.css
@@ -3,26 +3,35 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
 
     height: auto;
-    margin-top: 114px;
+    margin: 114px 50px 0;
   }
   
   #js-carousel{
-    width: 100%;
-    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
     overflow: hidden;
-    padding: 10px;
+    padding: 5px;
+    gap: 1rem;
+  }
+
+  .slides-container{
+    display: flex;
+    flex-direction: row;
+    transition: transform 0.5s ease-in-out;
+    width: 100%;
   }
   
   .slide{
-    width: 100%;
-    max-height: 250px;
-    padding: 15px;
+    flex: 0 0 100%;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    padding: 20px;
     display: none;
   
     background-color: var(--color-card-bg);
@@ -31,38 +40,51 @@
   }
   
   .slide.active{
-    display: block;
     display: flex;
-    align-items: center;
-    justify-content: space-evenly;
   }
 
   .slide-info{
-    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 20px;
+    gap: 1rem;
+    text-align: center;
+  }
+
+  .slide-info-author{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 1rem;
   }
 
   .slide-img img{
-    height: 200px;
-    width: auto;
+    width: 100%;
+    height: 300px;
     object-fit: cover;
     object-position: center;
+    border-radius: var(--border-radius);
   }
   
   
   /*Mobile*/
   @media (max-width: 430px) {
+    .carousel-section{
+      margin: 70px 10px 0;
+    }
+
     .slide {
       max-height: 600px;
     }
     .slide.active{
       flex-direction: column;
-    }
-  
-    .slide-img{
-      width: auto;
-      height: auto;
+      gap: 1rem;
     }
     .slide-img img{
+      width: 100%;
+      height: auto;
       object-fit: cover;
       object-position: center;
     }
