--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -4,8 +4,8 @@
 @import "./nav.css";
 @import "./index.css";
 @import "./carousel.css";
+@import "./postCard.css"; /*posts*/
 @import "./footer.css";
-
 
 
 * {
