--- a/src/assets/styles/buttons.css
+++ b/src/assets/styles/buttons.css
@@ -1,13 +1,12 @@
-@import "./base.css";
-
 /* General Style for Buttons */
-.pri-btn {
+.pri-btn, .share-btn, .back-btn{
     display: flex;
     align-items: center;
     justify-content: center;
     height: 40px;
     width: auto;
     max-width: 150px;
+    gap: 0.5rem;
     border: none;
     border-radius: var(--border-radius);
     padding: 0.6em 1.2em;
@@ -85,8 +84,7 @@
 }
 
 
-/* Back Btn */
-.back-btn{
+.edit-btn, .del-btn{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -95,38 +93,13 @@
     width: auto;
     max-width: 150px;
     border: none;
-    border-radius: var(--border-radius);
     padding: 0.6em 1.2em;
     font-family: var(--font-family-body);
     font-size: var(--font-size-body);
     text-transform: capitalize;
     text-align: center;
-    color: var(--color-light-bg);
-    background-color: var(--color-button);
-    box-shadow: var(--box-shadow-base);
-    cursor: pointer;
-}
-
-
-/* Share Btn */
-.share-btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 0.5rem;
-    height: 40px;
-    width: auto;
-    max-width: 150px;
-    border: none;
-    border-radius: var(--border-radius);
-    padding: 0.6em 1.2em;
-    font-family: var(--font-family-body);
-    font-size: var(--font-size-body);
-    text-transform: capitalize;
-    text-align: center;
-    color: var(--color-light-bg);
-    background-color: var(--color-button);
-    box-shadow: var(--box-shadow-base);
+    color: var(--color-button);
+    background-color: transparent;
     cursor: pointer;
 }
 
