--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -6,6 +6,7 @@
 @import "./carousel.css";
 @import "./postCard.css"; /*posts*/
 @import "./postPage.css"; /*posts page*/
+@import "./newPost.css"; /*create new post page*/
 @import "./footer.css";
 
 
@@ -25,4 +26,8 @@ body{
 img{
   max-width: 600px;
   width: 100%;
+}
+
+.hidden{
+  display: none;
 }
